# ai-radar

./: .env.example  .gitignore  README.md  pyproject.toml  sources.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  collect.yml  weekly.yml
data/: index.json  seen.json  state.json
docs/: 施工计划.md  设计方案-协商纪要-2026-07-12.md
eval/: golden.jsonl  run_regression.py
prompts/: deepread.md  judge.md  midread.md  score.md  weekly.md
reports/2026-07/: midweek-2026-07-17.json  midweek-2026-07-17.md  midweek-2026-07-19.json  midweek-2026-07-19.md  midweek-2026-07-23.json  midweek-2026-07-23.md  midweek-2026-07-24.json  midweek-2026-07-24.md  weekly-2026-07-19.md
scripts/: probe_sources.py
src/: __init__.py  config.py  models.py  state.py
src/collectors/: __init__.py  arxiv.py  base.py  github.py  hf_papers.py  rss.py  runner.py  web.py
src/llm/: __init__.py  client.py  deepread.py  prompts.py  scoring.py  settings.py
src/pipeline/: __init__.py  midweek.py  weekly.py
src/report/: __init__.py  delivery.py  images.py  index.py  render.py  select.py  weekly.py
src/tools/: __init__.py  schemas.py
src/validate/: __init__.py  judge.py  rules.py
tests/: test_collectors.py  test_config.py  test_delivery.py  test_judge.py  test_llm.py  test_models.py  test_pipeline.py  test_report.py  test_smoke.py  test_state.py  test_validate.py  test_weekly.py
tests/fixtures/: sample_arxiv.xml  sample_daily_papers.json  sample_listing.md  sample_org_repos.json  sample_releases.json  sample_rss.xml
